--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "pasted url toast package for juneview"
 #publish_to: 'none'
 repository: https://github.com/juneview-songdo/pasted_url_toast
 
-version: 1.0.0+1
+version: 1.0.2
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
